# forma

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  NOTICE  README.md  README.zh-CN.md  STRUCTURE.md  pyproject.toml  setup.py
.forma/: .gitignore  base.yaml  iteration-overlays.yaml  profile.yaml  project.yaml  reinstall-workflow.sh
.forma/references/: forma-iteration-boundaries.md  forma-profile-policy.md  forma-validation-matrix.md
docs/: AGENTS.md  concepts.md  concepts.zh-CN.md  examples.md  examples.zh-CN.md  forma-creator.md  forma-creator.zh-CN.md  profile-schema.md  profile-schema.zh-CN.md  quick-start.md  quick-start.zh-CN.md  skill-bundle.md  skill-bundle.zh-CN.md  targets.md  targets.zh-CN.md  usage.md  usage.zh-CN.md  verifier.md  verifier.zh-CN.md  workflow-contract.md  workflow-contract.zh-CN.md
npm/forma/: README.md  package.json
packaging/npm/: README.beforewave-forma.md  packages.toml
packaging/pypi/: README.beforewave-forma.md  packages.toml
plans/issue-actionable-report-rendering/: implement-notes.md  plan.md  rework.md  tasks.md
plans/issue-adopt-drift-base-origin/: implement-notes.md  plan.md  tasks.md
scripts/: build-dist.sh  build-npm-package.py  build-pypi-package.py  check-changelog-version.py  publish-npm.sh  publish-pypi.sh  validate.sh
src/forma/: cli.py  (+17 more)
tests/: test_cli.py  test_creator.py  test_creator_builder.py  test_creator_source_dogfood.py  test_docs_links.py  test_layer_1_dogfood.py  test_profile_draft.py  test_runtime_assets.py  test_verifier.py  test_workflow_build.py  test_workflow_runner.py
(+200 files in other folders)
