[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forma"
version = "0.1.0"
description = "Compile Plan-First agent workflows into verified Codex and Claude Code skill bundles and Codex plugins."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "BeforeWave" }]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
forma = "forma.cli:main"

[tool.setuptools.packages.find]
where = ["src", "source/skill-creator/scripts"]

[tool.setuptools.package-data]
"forma.assets" = ["**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
